# ROS-2-Adam-GOUX--GATEAU

./: .gitignore  README.md
TD1/: README.md
TD2/: README.md
src/tp1/: CMakeLists.txt
src/tp1/src/: main_nodeA.cpp  main_nodeB.cpp
src/tp2/: CMakeLists.txt  package.xml
src/tp2/config/: boat1.yaml
src/tp2/include/: node_Simulation.hpp
src/tp2/launch/: tp2_launch.py
src/tp2/src/: new_node.cpp  node_Simulation.cpp
